# mmtk-scheme

./: README.md  makefile
mmtk/: Cargo.toml  makefile
mmtk/src/: active_plan.rs  api.rs  collection.rs  lib.rs  object_model.rs  scanning.rs  slots.rs
scheme/: clayer.c  makefile  mmtk.h  mmtkUpcalls.c
