[package]
name = "mmtk-scheme"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
mmtk = { git = "https://github.com/mmtk/mmtk-core", branch = "master" }
lazy_static = { version = "1.1.0" }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_off"] }
libc = "0.2"

[lib]
name = "mmtkscheme"
crate-type = ["staticlib"]
doctest = false


[target.x86_64-unknown-linux-gnu]
rustflags = [ "-C", "linker=rust-lld"]
