[package]
name = "mmtk-scheme"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]

[dependencies]

lazy_static = { version = "1.1.0" }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_off"] }
libc = "0.2"
atomic = "0.6"

[dependencies.mmtk]
features = ["is_mmtk_object", "object_pinning", "sticky_immix_non_moving_nursery"] 
git = "https://github.com/mmtk/mmtk-core"
branch = "master"

[lib]
name = "mmtkscheme"
crate-type = ["staticlib"]
doctest = false


[target.x86_64-unknown-linux-gnu]
rustflags = [ "-C", "linker=rust-lld"]
